--- a/package.json
+++ b/package.json
@@ -10,8 +10,45 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/drawer": "^7.1.2",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "i18next": "^24.2.2",
+    "lottie-react-native": "^7.2.2",
+    "moment": "^2.30.1",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-i18next": "^15.4.1",
+    "react-native": "^0.78.0",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gifted-charts": "^1.4.58",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-ratings": "^8.1.0",
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-svg": "^15.11.2",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-wheel-color-picker": "^1.3.1",
+    "react-native-wheel-pick": "^1.2.4",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -20,6 +57,7 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.78.0",
     "@react-native/eslint-config": "0.78.0",
     "@react-native/metro-config": "0.78.0",
